trunk/Archive2/57/111ae2cb9a1a44/main.cpp
#include <string>

template <typename T>
T bar(const int arg)
{
    return T();
}

template<>
std::string bar(const int arg)
{
  struct SignificantName { char dummy[-1]; };
  return "";
}

int main()
{
}
